--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/seekBar6"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/textFilename"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp"
@@ -92,12 +92,12 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_audiotrack_black_24dp"
         android:id="@+id/imageButton7"
-        android:layout_above="@+id/textView"
+        android:layout_above="@+id/textFilename"
         android:layout_toRightOf="@+id/imageButton8"
         android:layout_toEndOf="@+id/imageButton8" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textFilename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="O4en_o4en_dJIuHHoe_Ha3BaHue_y_KuHoxu.mkv"
@@ -109,5 +109,23 @@
         android:layout_alignParentBottom="false"
         android:textAlignment="center"
         android:layout_alignParentRight="false" />
+
+    <TextView
+        android:text="0:00"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timePosTextView"
+        android:layout_below="@+id/textFilename"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="0:00"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textFilename"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/durationTextView" />
 
 </RelativeLayout>
